# dup_finder

./: .gitignore  1_clean_up.sh  2_cmk_build.sh  3_run.sh  CMakeLists.txt  README.md  cmk.sh  conanfile.txt  run.sh
include/: Object.hpp  ObjectManager.hpp  dup_scan.hpp  file.hpp  folder.hpp
src/: Object.cpp  ObjectManager.cpp  file.cpp  folder.cpp  main.cpp  sha256.hpp
